Fix overlap of anchor with summary headers

--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -321,4 +321,11 @@ details[open] .toc-header::after {
   }
 }
 
+@media (min-width: 50rem) {
+  .main-content summary > h2 > .anchor-heading {
+    left: auto;
+    right: 0rem;
+  }
+}
+
 //
